--- a/android/assets/i18n/MyBundle.properties
+++ b/android/assets/i18n/MyBundle.properties
@@ -1,5 +1,5 @@
 helloText1=four contacting with each other balls will be deleted
 helloText2=touch the screen to shoot in that direction
 helloText3=with every 100 points you'll get new level but time for thinking is decreasing
-helloText=four contacting with each other ballswill be deleted \n touch the screen to shut in that direction \n with every 100 points you'll get new level \n but time for thinking is decreasing
 howStart=Touch to start
+howToContinue=Touch to continue
